Stop objcopy from attempting to copy thin archives.

PR 24281
	* objcopy.c (copy_archive): Do not copy thin  archives.